scss/main.scss
@import 'config';
@import 'menu';

* {
	font-family: 'Nunito Sans';
	box-sizing: border-box;
}

body {
	@include background;
	background: $primary-color;
	color: set-text-color($primary-color);
	height: 100%;
	margin: 0;
	font-family: 'Nunito Sans', sans-serif;
	line-height: 1.5;
}

// Headings
h1,
h2,
h3 {
	margin: 0;
	font-weight: 400;

	&.lg-heading {
		font-size: 5rem;
	}

	&.sm-heading {
		margin-bottom: 2rem;
		padding: 0.2rem 1rem;
		background: rgba(lighten($primary-color, 2), 0.5);
	}
}

a {
	color: #fff;
	text-decoration: none;
}

header {
	position: fixed;
	z-index: 2;
	width: 100%;
}

.text-secondary {
	color: $secondary-color;
}

main {
	padding: 4rem;
	// height: 100%;
	min-height: calc(100vh - 60px);

	.icons {
		margin-top: 1rem;

		a {
			padding: 0.4rem;
			@include easeOut;

			&:hover {
				color: $secondary-color;
			}
		}
	}

	&#home {
		overflow: hidden;
		h1 {
			margin-top: 20vh;
		}
	}
}

.about-info {
	display: grid;
	grid-gap: 30px;
	grid-template-areas:
		'bioimage bio bio'
		'job1 job2 job3';
	grid-template-columns: repeat(3, 1fr);

	.bio-image {
		grid-area: bioimage;
		margin: auto;
		width: 250px;
		height: 250px;
		border-radius: 50%;
		border: $secondary-color 3px solid;
	}
	.tech {
		margin-top: 1.5rem;
		text-align: center;
	}

	.tech-icon {
		width: 75px;
		padding: 0.5rem;
	}

	.bio {
		grid-area: bio;
		font-size: 1.5rem;
	}
	.bio-text {
		font-weight: 200;
		font-size: 1.2rem;
	}

	.job-1 {
		grid-area: job1;
	}

	.job-2 {
		grid-area: job2;
	}

	.job-3 {
		grid-area: job3;
	}

	.job {
		background: lighten($primary-color, 5);
		padding: 1.5rem;
		border-bottom: $secondary-color 5px solid;
	}
	.job-text {
		font-weight: 300;
	}
}

// Work/Projects
.sm-print {
	font-size: 0.7rem;
	&-secondary {
		color: $secondary-color;
	}
}
.projects {
	display: grid;
	grid-gap: 0.7rem;
	grid-template-columns: repeat(3, 1fr);

	img {
		width: 100%;
		border: 3px #fff solid;

		&:hover {
			opacity: 0.5;
			border-color: $secondary-color;
			@include easeOut;
		}
	}
}
.item {
	display: flex;
	flex-direction: column;
}
.item-description {
	border: 3px #fff solid;
	display: flex;
	flex-direction: column;
	flex: 1;
	&__text {
		padding: 1rem;
		font-size: 0.75rem;
	}
}
.emphasis-text {
	font-size: 1.25rem;
	color: $secondary-color;
}
// Contact Page
.boxes {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	align-items: center;
	margin-top: 1rem;

	div {
		font-size: 1.5rem;
		padding: 1.5rem 2.5rem;
		margin-bottom: 1rem;
		@include easeOut;

		&:hover {
			padding: 0.5rem 1.5rem;
			background: $secondary-color;
			color: set-text-color($secondary-color);
			span {
				color: set-text-color($secondary-color);
			}
		}
	}
}
// Contact Form
.form-container {
	max-width: 35rem;
	margin: 0 auto;
}
#c-form {
	color: $secondary-color;
}
.contact-form {
	display: flex;
	flex-direction: column;
}
.contact-input {
	font-size: 1.3rem;
	padding-left: 1rem;
	padding-top: 0.6rem;
	padding-bottom: 0.6rem;
	margin-bottom: 1rem;
	background-color: lighten($primary-color, 15%);
	color: #fff;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border: none;
	border-radius: 3px;
}

.contact-btn {
	padding: 0.7rem;
	background-color: $secondary-color;
	font-size: 1.5rem;
	border: none;
	border-radius: 3px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
	border-bottom: 2px solid darken($secondary-color, 20%);
}
// Input Label Floating Utils
.form-group {
	display: flex;
	flex-direction: column;
	position: relative;
	margin-bottom: 1rem;
}
.contact-label {
	position: absolute;
	top: 8%;
	padding-left: 1rem;
	transition: all 250ms;
	opacity: 0.75;
	font-size: 1.3rem;
}
::placeholder {
	color: white;
	opacity: 75%;
}

.text-label {
	position: absolute;
	top: 2%;
	padding-left: 1rem;
	transition: all 250ms;
	opacity: 0.75;
	font-size: 1.3rem;
}
::placeholder {
	color: white;
	opacity: 75%;
}

.contact-input:focus + .contact-label,
.contact-input:valid + .contact-label,
.contact-input:focus + .text-label,
.contact-input:valid + .text-label {
	font-size: 85%;
	transform: translate3d(0, -135%, 0);
	opacity: 1;
}

// Button Styles
.btn {
	display: block;
	padding: 0.5rem 1rem;
	border: 0;
	margin-bottom: 0.3rem;
	&:hover {
		background: $secondary-color;
		color: set-text-color($secondary-color);
	}
}

.btn-dark {
	@extend .btn;
	background: darken($primary-color, 50);
	color: #fff;
}

.btn-light {
	@extend .btn;
	background: lighten($primary-color, 50);
	color: #333;
}

#main-footer {
	text-align: center;
	padding: 1rem;
	background: darken($primary-color, 10);
	color: set-text-color($primary-color);
	height: 60px;
}

@import 'mobile';

